--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -13,13 +13,13 @@
 	width: 350px;
 }
 
-.admin-panel {
+.panel {
 	display: inline-block;
 	width: 32%;
 	margin: 1% 2% 1% 0;
 }
 
-.admin-panel:nth-child(3n) {
+.panel:nth-child(3n) {
 	margin-right: 0;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .panel-image img {
-	max-width: 100%;
+	width: 100%;
 }
 
 .panel-buttons {
@@ -116,10 +116,15 @@
 }
 
 .background-image-editor .image-loader {
+	float: left;
 	width: 170px;
 	height: 110px;
 	background-color: #EEE;
-	float: left;
+	overflow: hidden;
+}
+
+.background-image-editor .image-loader img {
+	width: 100%;
 }
 
 .background-image-editor .data-fields {
