--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -34,6 +34,7 @@
 }
 
 .panel {
+	position: relative;
 	float: left;
 	width: 32%;
 	margin: 1% 2% 1% 0;
@@ -47,6 +48,14 @@
 	height: 170px;
 	background: #E0E0E0;
 	overflow: hidden;
+	text-align: center;
+	cursor: pointer;
+}
+
+.panel-image .no-image {
+	line-height: 170px;
+	margin: 0;
+	width: 100%;
 }
 
 .panel-image img {
@@ -65,6 +74,34 @@
 }
 
 .panel-controls {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.panel:hover .panel-controls {
+	display: block;
+}
+
+.panel-controls a {
+	display: block;
+	width: 20px;
+	height: 20px;
+	background-color: #FFF;
+	margin: 10px;
+	text-indent: -9999px;
+}
+
+.delete-panel {
+
+}
+
+.duplicate-panel {
+
+}
+
+.toggle-visibility {
 
 }
 
