--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -354,9 +354,9 @@
 	width: 99%
 }
 
-.delete-dialog {
+.delete-accordion-dialog,
+.delete-panel-dialog {
 	position: fixed;
-	width: 330px;
 	height: 90px;
 	background-color: #FFF;
 	padding: 10px 20px;
@@ -366,6 +366,14 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+}
+
+.delete-accordion-dialog {
+	width: 330px;
+}
+
+.delete-panel-dialog {
+	width: 300px;
 }
 
 .dialog-question {
