add possibility to duplicate accordions

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -2,7 +2,7 @@
 	margin-top: 20px;
 }
 
-.accordion-list tr:nth-child(2n+1) {
+.accordions-list tr:nth-child(2n+1) {
 	background-color: #F9F9F9;
 }
 
