add layer content field and duplication functionality

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -428,6 +428,12 @@
     display: block;
 }
 
+.layers-editor .layer-text {
+	width: 790px;
+	height: 80px;
+	margin: 0;
+}
+
 .breakpoints-box .inside {
 	margin: 0;
 	padding: 0;
