--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -324,6 +324,35 @@
 	background-color: #EEE;
 }
 
+.layers-editor .as-layer {
+	position: absolute;
+	margin: 0;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-webkit-font-smoothing: subpixel-antialiased;
+}
+
+.layers-editor .as-layer.as-black {
+	color: #FFF;
+	background: rgb(0, 0, 0);
+	background: rgba(0, 0, 0, 0.7);
+}
+
+.layers-editor .as-layer.as-white {
+	color: #000;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+}
+
+.layers-editor .as-layer.as-rounded {
+	border-radius: 10px;
+}
+
+.layers-editor .as-layer.as-padding {
+	padding: 10px;
+}
+
 .layers-editor .controls {
 	padding: 10px;
 	overflow: hidden;
@@ -344,7 +373,7 @@
 
 .layers-editor .layers-list {
 	width: 130px;
-	height: 120px;
+	height: 121px;
 	overflow: auto;
 	margin: 0;
 }
@@ -432,6 +461,14 @@
 	width: 790px;
 	height: 80px;
 	margin: 0;
+}
+
+.layers-editor .viewport-image {
+	position: absolute;
+}
+
+.layers-editor .viewport-layers {
+	position: absolute;
 }
 
 .breakpoints-box .inside {
