--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -514,6 +514,10 @@
 	text-align: center;
 }
 
+.breakpoint {
+	background-color: #FFF;
+}
+
 .breakpoint-header {
 	width: 100%;
 	padding: 5px 10px;
