--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -694,3 +694,43 @@
 .dialog-buttons {
 	text-align: right;
 }
+
+.multi-check {
+	text-align: left;
+    width: 215px;
+    margin-left: 14px;
+    border: 1px solid #CCC;
+    padding: 0 5px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.multi-check-header {
+	padding: 5px;
+	cursor: pointer;
+}
+
+.multi-check-content {
+	overflow: auto;
+	height: 100px;
+	border-top: 1px solid #CCC;
+}
+
+.multi-check input {
+	margin: 0 !important;
+}
+
+.multi-check label {
+	margin-left: 5px;
+}
+
+.multi-check .group-label {
+	text-align: center;
+	padding: 5px 0;
+	border-bottom: 1px solid #DDD;
+}
+
+.multi-check .single-check-container {
+	padding: 5px;
+}
