fix preview window responsiveness

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -262,9 +262,9 @@
 }
 
 .preview-window {
-	width: 800px;
+	/*width: 800px;
 	height: 400px;
-	padding: 20px 50px 100px;
+	padding: 20px 50px 100px;*/
 }
 
 .preview-title {
