--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -261,17 +261,19 @@
 	content: '×';
 }
 
-.preview-window {
-	/*width: 800px;
-	height: 400px;
-	padding: 20px 50px 100px;*/
+.modal-window .heading {
+	margin: 0 0 10px 0;
+	font-size: 20px;
+	font-weight: normal;
+	line-height: 1;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #DDD;
 }
 
-.preview-title {
-	font-size: 20px;
-	border-bottom: 1px solid #999;
-	padding-bottom: 10px;
-	margin-bottom: 20px;
+.modal-window .buttons .close,
+.modal-window .buttons .save  {
+	float: right;
+	margin-left: 10px;
 }
 
 .background-image-editor .modal-window {
@@ -287,15 +289,6 @@
 .background-image-editor .fieldset {
 	overflow: hidden;
 	margin-bottom: 30px;
-}
-
-.background-image-editor .heading {
-	margin: 0 0 10px 0;
-	font-size: 20px;
-	font-weight: normal;
-	line-height: 1;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #DDD;
 }
 
 .clear-fieldset {
@@ -359,19 +352,16 @@
 	width: 612px;
 }
 
-.background-image-editor .add-opened-background-image,
-.background-image-editor .add-link  {
-	margin-right: 10px;
+.html-editor .modal-window textarea {
+	min-width: 600px;
+	min-height: 300px;
+	margin-bottom: 20px;
 }
 
-.background-image-editor .buttons .close,
-.background-image-editor .buttons .save,
-.layers-editor .buttons .close,
-.layers-editor .buttons .save,
-.settings-editor .buttons .close,
-.settings-editor .buttons .save  {
-	float: right;
-	margin-left: 10px;
+@media (max-width: 660px) {
+	.html-editor:before {
+		display: none;
+	}
 }
 
 .layers-editor .modal-window {
