--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -375,22 +375,6 @@
 	}
 }
 
-.layers-editor .viewport {
-	width: 100%;
-	height: 400px;
-	border-bottom: 1px solid #DDD;
-	background-image:
-	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%),
-	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%);
-    background-image:
-	    -webkit-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%),
-	    -webkit-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%);
-    -moz-background-size: 20px 20px;
-    -webkit-background-size: 21px 21px;
-    background-size: 20px 20px;
-    background-position: 0 0, 10px 10px;
-}
-
 .layers-editor .as-layer {
 	position: absolute;
 	margin: 0;
@@ -538,12 +522,31 @@
 	margin: 0;
 }
 
+.layers-editor .viewport {
+	position: relative;
+	text-align: center;
+	border-bottom: 1px solid #DDD;
+	background-image:
+	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%),
+	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%);
+    background-image:
+	    -webkit-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%),
+	    -webkit-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%);
+    -moz-background-size: 20px 20px;
+    -webkit-background-size: 21px 21px;
+    background-size: 20px 20px;
+    background-position: 0 0, 10px 10px;
+}
+
 .layers-editor .viewport-image {
-	position: absolute;
+	position: relative;
+	height: 100%;
 }
 
 .layers-editor .viewport-layers {
 	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 .layers-editor .viewport-layer {
