add custom css and js

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -839,3 +839,14 @@
 		float: none;
 	}
 }
+
+.button-primary.custom-css-js-update {
+	display: block;
+	margin-left: 3px;
+	margin-bottom: 40px;
+}
+
+.custom-css,
+.custom-js {
+	margin-bottom: 20px;
+}
