--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -606,6 +606,24 @@
     height: 95px;
 }
 
+.layer-image-input {
+	position: relative;
+}
+
+.layer-image-input input {
+	padding-right: 25px;
+}
+
+.layer-image-loader {
+	width: 17px;
+	height: 17px;
+	position: absolute;
+	background-color: #CCC;
+	bottom: 6px;
+	right: 4px;
+	cursor: pointer;
+}
+
 .layers-editor .viewport {
 	position: relative;
 	width: 100%;
