add cache expiry interval

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -965,6 +965,12 @@
 	margin-top: 30px;
 }
 
+#cache-expiry-interval {
+	width: 50px;
+	margin-right: 10px;
+	text-align: center;
+}
+
 .as-clearfix {
     display: inline-block;
 }
