--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -969,6 +969,38 @@
 	text-align: center;
 }
 
+.purchase-code {
+	margin-top: 50px;
+	padding-top: 20px;
+	border-top: 1px solid #DDD;
+}
+
+.purchase-code-field {
+	width: 400px;
+	margin: 0 20px;
+}
+
+.purchase-code-message {
+	border-left: 4px solid;
+	padding: 10px;
+	background-color: #FFF;
+	-moz-box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+	-webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+}
+
+.empty-code {
+	border-color: #F0AD4E;
+}
+
+.valid-code {
+	border-color: #7ad03a;
+}
+
+.not-valid-code {
+	border-color: #D9534F;
+}
+
 .as-clearfix {
     display: inline-block;
 }
